[package]
name = "actix-stale-payload"
authors = ["Vojtech Kral <vojtech@kral.pm>"]
version = "0.1.0"
edition = "2021"

[lib]
name = "actix_stale_payload"
path = "src/lib.rs"

[[bin]]
name = "actix-stale-payload"
path = "src/main.rs"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
reqwest = "0.11"
hurl = "1.7.0"
hurl_core = "1.7"
